[tool.poetry]
name = "pydelhi-bot"
version = "3.0"
description = "The official telegram bot for the PyDelhi Telegram group"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<4"
certifi = "2019.3.9"
chardet = "3.0.4"
entrypoints = "0.3"
future = "0.17.1"
idna = "2.8"
isort = "4.3.21"
mccabe = "0.6.1"
python-telegram-bot = "5.3.0"
pytz = "2016.10"
requests = "^2.2"
urllib3 = "1.26.5"

[tool.poetry.dev-dependencies]
flake8 = "3.7.7"
pyflakes = "2.1.1"
pycodestyle = "2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
